--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,48 +1,14 @@
 <!doctype html>
+<HTML lang="sp">
 <html>
 <head>
   <title>Tic Tac Toe</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" type="text/css" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <script src="tic.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
-  <style>
-  body {
-    font-family: Yellowtail;
-    font-size: 50px;
-    color: gray;
-    font-weight: bold;
-  }
-  .header {
-    font-size: 60px;
-    color: black;
-    margin-bottom: 40px;
-  }
-  .row0 {
-    border-bottom: 2px solid black;
-  }
-  .col1 {
-    border-right: 2px solid black;
-  }
-  .col2 {
-    border-right: 2px solid black;
-  }
-  #board{
-    margin-top: 80px;
-  }
-  #reset {
-    margin-top: 40px;
-  }
-/*  video#bgvid {
-    position: fixed; right: 0; bottom: 0;
-    min-width: 100%; min-height: 100%;
-    width: auto; height: auto; z-index: -100;
-    /*background: url("https://www.youtube.com/watch?v=b3zf77RcGaI") no-repeat;
-    background-size: cover;
-  }*/
-
-  </style>
 </head>
 <body>
   <!-- <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
@@ -55,28 +21,28 @@
     <div class="row text-center row-centered" id="board">
       <div class="col-md-2 col-md-offset-5">
     <div class="row row-centered row0">
-          <div class="col-md-4 col-xs-4 col1 block ">1</div>
-          <div class="col-md-4 col-xs-4 col2 block ">2</div>
-          <div class="col-md-4 col-xs-4 col3 block ">3</div>
+          <div class="col-md-4 col-xs-4 col1 block "></div>
+          <div class="col-md-4 col-xs-4 col2 block "></div>
+          <div class="col-md-4 col-xs-4 col3 block "></div>
     </div>
       </div>
       <div class="col-md-2 col-md-offset-5">
     <div class="row row-centered row0">
-          <div class="col-md-4 col-xs-4 col1 block ">4</div>
-          <div class="col-md-4 col-xs-4 col2 block ">5</div>
-          <div class="col-md-4 col-xs-4 col3 block ">6</div>
+          <div class="col-md-4 col-xs-4 col1 block "></div>
+          <div class="col-md-4 col-xs-4 col2 block "></div>
+          <div class="col-md-4 col-xs-4 col3 block "></div>
     </div>
       </div>
       <div class="col-md-2 col-md-offset-5">
     <div class="row row-centered row2">
-          <div class="col-md-4 col-xs-4 col1 block ">7</div>
-          <div class="col-md-4 col-xs-4 col2 block ">8</div>
-          <div class="col-md-4 col-xs-4 col3 block ">9</div>
+          <div class="col-md-4 col-xs-4 col1 block "></div>
+          <div class="col-md-4 col-xs-4 col2 block "></div>
+          <div class="col-md-4 col-xs-4 col3 block "></div>
     </div>
       </div>
     </div>
   </div>
-  <button class="reset text-center col-md-2 col-md-offset-5" id="reset">Reset</button>
+  <button class="reset text-center col-md-2 col-md-offset-5" id="reset">Reinciar</button>
 <!--   <video autoplay loop poster="https://www.youtube.com/watch?v=b3zf77RcGaI" id="bgvid">
     <source src="https://www.youtube.com/watch?v=b3zf77RcGaI" type="video/webm">
   </video> -->
