--- a/tictactoe.html
+++ b/tictactoe.html
@@ -7,46 +7,44 @@
   <link href="style.css" type="text/css" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src="tic.js"></script>
+  <script src="ticjquery.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <!-- <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+  <div style="position: fixed; z-index: -99; width: 110%; height: 110%;">
+
     <iframe frameborder="0" height="100%" width="100%"
-    src="https://www.youtube.com/watch?v=b3zf77RcGaI"></iframe>
-  </div> -->
+    src="https://youtube.com/embed/b3zf77RcGaI?autoplay=1&iv_load_policy=3&controls=0&showinfo=0&autohide=1"></iframe>
+  </div>
+
    <h1 class="header col-md-4 col-md-offset-4">Tic Tac Toe Juego</h1>
   <div class="container">
 
     <div class="row text-center row-centered" id="board">
       <div class="col-md-2 col-md-offset-5">
     <div class="row row-centered row0">
-          <div class="col-md-4 col-xs-4 col1 block "></div>
-          <div class="col-md-4 col-xs-4 col2 block "></div>
-          <div class="col-md-4 col-xs-4 col3 block "></div>
+          <div class="col-md-4 col-xs-4 col1 block ">1</div>
+          <div class="col-md-4 col-xs-4 col2 block ">2</div>
+          <div class="col-md-4 col-xs-4 col3 block ">3</div>
     </div>
       </div>
       <div class="col-md-2 col-md-offset-5">
     <div class="row row-centered row0">
-          <div class="col-md-4 col-xs-4 col1 block "></div>
-          <div class="col-md-4 col-xs-4 col2 block "></div>
-          <div class="col-md-4 col-xs-4 col3 block "></div>
+          <div class="col-md-4 col-xs-4 col1 block ">4</div>
+          <div class="col-md-4 col-xs-4 col2 block ">5</div>
+          <div class="col-md-4 col-xs-4 col3 block ">6</div>
     </div>
       </div>
       <div class="col-md-2 col-md-offset-5">
     <div class="row row-centered row2">
-          <div class="col-md-4 col-xs-4 col1 block "></div>
-          <div class="col-md-4 col-xs-4 col2 block "></div>
-          <div class="col-md-4 col-xs-4 col3 block "></div>
+          <div class="col-md-4 col-xs-4 col1 block ">7</div>
+          <div class="col-md-4 col-xs-4 col2 block ">8</div>
+          <div class="col-md-4 col-xs-4 col3 block ">9</div>
     </div>
       </div>
     </div>
   </div>
   <button class="reset text-center col-md-2 col-md-offset-5" id="reset">Reinciar</button>
-<!--   <video autoplay loop poster="https://www.youtube.com/watch?v=b3zf77RcGaI" id="bgvid">
-    <source src="https://www.youtube.com/watch?v=b3zf77RcGaI" type="video/webm">
-  </video> -->
-
 
 </body>
 </html>
